--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
               <div class="logoContainer">
                  <a href="index.html">
                     <img
-                    src="../imagenes/logoResponsive.png"
+                    src="../imagenes/logoResponsive.svg"
                     alt="Logotipo"
                     class="logotipo"/>
                  </a>
