--- a/index.html
+++ b/index.html
@@ -137,10 +137,10 @@
                  </label>
               <div class="logoContainer">
                  <a href="index.html">
-                    <img
+                    <svg
                     src="../imagenes/logoResponsive.svg"
                     alt="Logotipo"
-                    class="logotipo"/>
+                    class="logotipo"></svg>
                  </a>
               </div>
                  <ul class="menu-items">
