--- a/index.html
+++ b/index.html
@@ -137,10 +137,10 @@
                  </label>
               <div class="logoContainer">
                  <a href="index.html">
-                    <svg
-                    src="../imagenes/logoResponsive.svg"
+                    <img
+                    src="imagenes/logoResponsive.svg"
                     alt="Logotipo"
-                    class="logotipo"></svg>
+                    class="logotipo" />
                  </a>
               </div>
                  <ul class="menu-items">
