--- a/index.html
+++ b/index.html
@@ -104,30 +104,9 @@
 
   <body>
     <div id="container">
-      <header>
-          <nav class=".navbarDesktop">
-            <ul class="desktop">
-              <li>
-                <a href="index.html">Inicio</a>
-              </li>
-              </li>
-              <li>
-                 <a href="productos.html">Productos</a>
-              </li>
-              <li>
-                  <a href="nosotros.html">Nosotros</a>
-              </li>
-              <li>
-                 <a href="ideas.html">Ideas</a>
-              </li>
-              <li>
-                 <a href="contactenos.html">Contáctenos</a>
-              </li>
-           </ul>
-          </nav>
-      </header>
-           <!-- Menus -->   
+        <!-- Menus -->   
           <nav class="navbarMobile">
+            <div class="navbarDsktop">
               <div class="navContainer">
                  <input type="checkbox" name="checkbox" id="chk" />
                  <label for="chk" class="hamburger">
@@ -157,8 +136,10 @@
                         <a href="contactenos.html">Contáctenos</a>
                      </li>
                   </ul>
+                  
               </div>
-           </nav>
+            </div>
+          </nav>
 
     <section class="aboveTheFold">
       <button 
