--- a/index.html
+++ b/index.html
@@ -104,22 +104,24 @@
 
 <body>
   <div id="container">
-        <!-- Menus -->   
-      <div class="navContainer">
+        <!-- Menus -->  
+    <nav class="navbarMobile"> 
+       <div class="navContainer">
                  <input type="checkbox" name="checkbox" id="chk" />
                  <label for="chk" class="hamburger">
                      <span class="line line1"></span>
                      <span class="line line2"></span>
                      <span class="line line3"></span>
                  </label>
-              <div class="logoContainer">
+               <div class="logoContainer">
                  <a href="index.html">
                     <img
                     src="../imagenes/logoResponsive.png"
                     alt="Logotipo"
                     class="logotipo" />
                  </a>
-              </div>
+                </div>
+              <div>
                 <ul class="menu-items">
                      <li>
                         <a href="productos.html">Productos</a>
@@ -136,9 +138,9 @@
                  </ul>
                   
               </div>
-       </div>
-          
-
+        </div>
+   </nav>      
+ 
     <section class="aboveTheFold">
       <button 
          class="btn" type="button"><a href="productos.html">Desbloquea un recuerdo</a>
