--- a/index.html
+++ b/index.html
@@ -141,8 +141,8 @@
    </nav>      
  
     <section class="aboveTheFold">
-      <button 
-         class="btn" type="button"><a href="productos.html">Desbloquea un recuerdo</a>
+      <button class="btn" type="button">
+        <a href="productos.html">Desbloquea un recuerdo</a>
       </button>
     </section>
 
